--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
-  <script src="https://js.arcgis.com/4.24/"></script>
-  <script>
-    require(["esri/config","esri/Map", "esri/views/MapView"], function (esriConfig,Map, MapView) {
 
-    });
-  </script>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
 
   <title>JW ArcJs Sandbox</title>
 </head>
 <body>
   <h1>This is my Arcjs Sandbox</h1>
-  <div id="viewDiv">viewDiv</div>
+  <div id="viewDiv"></div>
 </body>
-<script src="app.js"></script> 
+<script src="https://js.arcgis.com/4.24/"></script>
+<script type='text/javascript' src='config.js'></script>
+<script type='text/javascript' src='app.js'></script>
 </html>
